Added initial game server and necessary packages

--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "main": "index.js",
   "scripts": {
     "prestart": "webpack",
-    "start": "node app-server.js"
+    "start": "node app-server.js",
+    "GameServer": "./node_modules/.bin/babel-node ./server/GameServer --port 3333"
   },
   "author": "Trenton Miller",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.23.0",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
+    "file-loader": "^0.10.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.0"
+    "react-router": "^2.0.0",
+    "socket.io": "^1.7.3"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
