--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prestart": "webpack",
     "start": "node app-server.js",
+    "devserver": "./node_modules/.bin/webpack-dev-server",
     "GameServer": "./node_modules/.bin/babel-node ./server/GameServer --port 3333"
   },
   "author": "Trenton Miller",
@@ -18,7 +19,9 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0",
-    "socket.io": "^1.7.3"
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3",
+    "webpack-dev-server": "^2.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
