--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "devserver": "./node_modules/.bin/webpack-dev-server",
     "GameServer": "./node_modules/.bin/babel-node ./server/GameServer --port 3333"
   },
-  "author": "Trenton Miller",
+  "author": "Trenton Miller / Matthew Perry",
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.23.0",
